# MathOptimizer

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  grammar.txt  test.py
include/: BottomUpParser.h  Node.h  Optimizer.h  Parser.h  Scanner.h  TopDownParser.h
src/: BottomUpParser.cpp  CMakeLists.txt  Node.cpp  Optimizer.cpp  Parser.cpp  Scanner.cpp  TopDownParser.cpp  main.cpp
